# Excel-Addin-Generator

./: .travis.yml  README.md  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: python-package.yml
excelAddinGenerator/: __init__.py  main.py
src/: [Content_Types].xml  excelAddinGenerator.py
src/_rels/: .rels
src/data/_rels/: .rels
src/data/docProps/: app.xml  core.xml
src/data/xl/: workbook.xml
src/data/xl/_rels/: workbook.xml.rels
src/data/xl/theme/: theme1.xml
src/data/xl/worksheets/: sheet1.xml
src/excel_addin_generator/: __main__.py  main.py
src/excel_addin_generator/data/: [Content_Types].xml
src/excel_addin_generator/data/xl/: styles.xml
src/xl/: styles.xml
test/: test.xlam  test_excelAddinGenerator.py
tests/: test_excelAddinGenerator.py
